--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -46,7 +46,7 @@ li { margin: 0.4rem 0; }
 *:target { background: yellow; }
 
 .w {
-  max-width: 640px;
+  max-width: 800px;
   margin: 0 auto;
   padding: 4rem 2rem;
 }
@@ -69,7 +69,7 @@ table, th, td {
 
 code {
   color: white;
-  background: black;
+  background: darkgrey;
 }
 
 div.highlighter-rouge code {
